--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@splinetool/r3f-spline": "^1.0.2",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "client": "file:",
     "framer-motion": "^11.0.5",
     "leaflet": "^1.9.4",
     "next": "14.1.0",
